welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:7: error: too many arguments for method droite: ()Unit
  droite(avance)
        ^